src/styles/components/cards/CommentCard.module.scss
@import '@styles/Variables';

.comment {
    margin-bottom: 10px;

    .text {
        margin-left: 6px;
        background-color: $grey1;
        border-radius: 15px;
        padding: 6px 12px;
        font-size: 14px;
        overflow: hidden;
    }

    .buttons {
        margin: 5px 0 0 36px;

        > button {
            all: unset;
            cursor: pointer;
            font-size: 12px;
            color: $grey5;
            margin-right: 10px;
        }
    }
}

